data/all_generated_tests/raw_wast_tests/unreachable_InfiniteLoops_1177.wast
;; 8. **Test Description:**    - Position `unreachable` immediately after a `call` to an empty function within a `loop`, followed by `br_if` evaluating a variable increment. The trap should prevent variable increment and infinite loop.    - Constraint: Verifies traps occur correctly after function calls within loops.    - Infinite Loop Relation: Prevents increment and loop repetition, indicating proper trap handling.

(assert_invalid
  (module
    (func $empty)
    (func (loop
      (call $empty)
      (unreachable)
      (i32.const 0)
      (i32.const 1)
      (i32.add)
      (br_if 0 (i32.const 1))
    ))
  )
  "type mismatch"
)